--- a/log4j.properties
+++ b/log4j.properties
@@ -1,4 +1,17 @@
-log4j.rootLogger=TRACE, FileAPPENDER, SocketHubAPPENDER
+log4j.rootLogger=TRACE,  FileAPPENDER
+log4j.rootLogger=DEBUG,  CONSOLE
+
+#at least WARN and ERROR traces are available for below loggers for console appender
+log4j.logger.org.springframework=WARN, CONSOLE
+log4j.additivity.org.springframework=false
+
+log4j.logger.org.hibernate=WARN, CONSOLE
+log4j.additivity.org.hibernate=false
+
+log4j.logger.thymeleaf.TemplateEngine=WARN, CONSOLE
+log4j.additivity.thymeleaf.TemplateEngine=false
+
+
 # --- FILE APPENDER ---
 log4j.appender.FileAPPENDER=org.apache.log4j.RollingFileAppender
 log4j.appender.FileAPPENDER.file=traces/traces.log
@@ -6,11 +19,19 @@ log4j.appender.FileAPPENDER.layout=org.apache.log4j.PatternLayout
 log4j.appender.FileAPPENDER.MaxFileSize=50MB
 log4j.appender.FileAPPENDER.MaxBackupIndex=3
 log4j.appender.FileAPPENDER.layout.ConversionPattern=%d{YY-MM-dd HH:mm:ss.SSS} [%-5p] [%t] [%l] - %m%n
+
+# --- CONSOLE APPENDER ---
+log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
+log4j.appender.CONSOLE.Target=System.out
+log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
+log4j.appender.CONSOLE.layout.conversionPattern=%d{YY-MM-dd HH:mm:ss} [%-5p] [%c{2}] - %m%n
+
 # --- TELNET APPENDER ---
-log4j.appender.SocketHubAPPENDER=org.apache.log4j.net.TelnetAppender
-log4j.appender.SocketHubAPPENDER.Port=55522
-log4j.appender.SocketHubAPPENDER.layout=org.apache.log4j.PatternLayout
-log4j.appender.SocketHubAPPENDER.layout.ConversionPattern=%d{YY-MM-dd HH:mm:ss.SSS} [%-5p] [%t] [%l] - %m%n
+#log4j.appender.SocketHubAPPENDER=org.apache.log4j.net.TelnetAppender
+#log4j.appender.SocketHubAPPENDER.Port=55522
+#log4j.appender.SocketHubAPPENDER.layout=org.apache.log4j.PatternLayout
+#log4j.appender.SocketHubAPPENDER.layout.ConversionPattern=%d{YY-MM-dd HH:mm:ss.SSS} [%-5p] [%t] [%l] - %m%n
+
 # TRACE LEVELS:
 # 1. FATAL
 # 2. ERROR
