--- a/log4j.properties
+++ b/log4j.properties
@@ -24,7 +24,7 @@ log4j.appender.FileAPPENDER.layout.ConversionPattern=%d{YY-MM-dd HH:mm:ss.SSS} [
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
-log4j.appender.CONSOLE.layout.conversionPattern=%d{YY-MM-dd HH:mm:ss} [%-5p] [%c{2}] - %m%n
+log4j.appender.CONSOLE.layout.conversionPattern=%d{YY-MM-dd HH:mm:ss} [%-5p] [%c{1}:%L] - %m%n
 
 # --- TELNET APPENDER ---
 #log4j.appender.SocketHubAPPENDER=org.apache.log4j.net.TelnetAppender
