--- a/application.properties
+++ b/application.properties
@@ -14,4 +14,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 #internal sensor for temperature, humidity, pressure (DHT11, BMP180 - WebSensor class)
 custom.ipInternalSensor = 192.168.1.115:80
+custom.intSensorPassword = 04122018pass
 custom.ipExternalSensor = api.openweathermap.org/data/2.5/weather?id=3094802&appid=687d050dcb5e9bec0e31d3a59ca8113c
