--- a/log4j.properties
+++ b/log4j.properties
@@ -18,7 +18,7 @@ log4j.appender.FileAPPENDER.file=traces/traces.log
 log4j.appender.FileAPPENDER.layout=org.apache.log4j.PatternLayout
 log4j.appender.FileAPPENDER.MaxFileSize=50MB
 log4j.appender.FileAPPENDER.MaxBackupIndex=3
-log4j.appender.FileAPPENDER.layout.ConversionPattern=%d{YY-MM-dd HH:mm:ss.SSS} [%-5p] [%t] [%l] - %m%n
+log4j.appender.FileAPPENDER.layout.ConversionPattern=%d{YY-MM-dd HH:mm:ss.SSS} [%-5p] [%c{1}] - %m%n
 
 # --- CONSOLE APPENDER ---
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
