--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>home.server.app</groupId>
 	<artifactId>home-server-app</artifactId>
-	<version>0.1.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging> 
 	
 	<parent>
@@ -12,6 +12,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.4.1.RELEASE</version>
 	</parent>
+	
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 	
 	<dependencies> 
 		<dependency>
@@ -100,14 +105,66 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		</dependency>
 	</dependencies>
 
-
 	<build>
+		<defaultGoal>install</defaultGoal>
 	    <finalName>EmbeddedApp</finalName>
+	    <sourceDirectory>${basedir}/src/</sourceDirectory>
+	    <scriptSourceDirectory>${basedir}/src/scripts</scriptSourceDirectory>
+	    <testSourceDirectory>${basedir}/src/tess</testSourceDirectory>
+	    <outputDirectory>${basedir}/target/classes</outputDirectory>
+	    <testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>
 		<plugins>
+				<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-dependency-plugin</artifactId>
+		    <executions>
+		        <execution>
+		            <id>copy-dependencies</id>
+		            <phase>prepare-package</phase>
+		            <goals>
+		                <goal>copy-dependencies</goal>
+		            </goals>
+		            <configuration>
+		                <outputDirectory>
+		                    ${project.build.directory}/lib
+		                </outputDirectory>
+		            </configuration>
+		        </execution>
+		    </executions>
+		</plugin>
+		<plugin>
+		    <groupId>org.apache.maven.plugins</groupId>
+		    <artifactId>maven-jar-plugin</artifactId>
+		    <configuration>
+		    		            	<source>1.8</source>
+						<target>1.8</target>
+		        <archive>
+		            <manifest>
+		                <addClasspath>true</addClasspath>
+		                <classpathPrefix>lib/</classpathPrefix>
+		                <mainClass>homeSystem.EmbeddedApp</mainClass>
+		            </manifest>
+		        </archive>
+		    </configuration>
+		</plugin>
+		<!--  
 			<plugin> 
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>	
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+				   <execution>
+				       <goals>
+				           <goal>repackage</goal>
+				       </goals>
+				       <configuration>
+						    <source>1.8</source>
+							<target>1.8</target>
+				           <classifier>executable</classifier>
+				           <mainClass>homeSystem.EmbeddedApp</mainClass>
+				       </configuration>
+				   </execution>
+			    </executions>
+			</plugin>-->	
 		</plugins>
 	</build>
 </project>
