--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,62 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 			        </archive>
 			    </configuration>
 			</plugin>
+			
+			
+		      <plugin>
+		        <groupId>com.coderplus.maven.plugins</groupId>
+		        <artifactId>copy-rename-maven-plugin</artifactId>
+		        <version>1.0</version>
+		        <executions>
+		          <execution>
+		            <id>copy-file</id>
+		            <phase>generate-sources</phase>
+		            <goals>
+		              <goal>copy</goal>
+		            </goals>
+		            <configuration>
+		            <fileSets>
+					  <fileSet>
+			              <sourceFile>${basedir}/log4j.properties</sourceFile>
+			              <destinationFile>${basedir}/target/log4j.properties</destinationFile>
+					  </fileSet>
+					  <fileSet>
+		              	<sourceFile>${basedir}/application.properties</sourceFile>
+		              	<destinationFile>${basedir}/target/application.properties</destinationFile>
+					  </fileSet>  
+					  <fileSet>
+		              	<sourceFile>${basedir}/WebContent/WEB-INF/lib/css/style.css</sourceFile>
+		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/lib/css/style.css</destinationFile>
+					  </fileSet>
+					  <fileSet>
+		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/fragments.html</sourceFile>
+		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/fragments.html</destinationFile>
+					  </fileSet>      
+					  <fileSet>
+		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/home.html</sourceFile>
+		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/home.html</destinationFile>
+					  </fileSet>
+					   <fileSet>
+		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/login.html</sourceFile>
+		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/login.html</destinationFile>
+					  </fileSet>   
+					   <fileSet>
+		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/registration.html</sourceFile>
+		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/registration.html</destinationFile>
+					  </fileSet>  
+					  <fileSet>
+		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/settings.html</sourceFile>
+		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/settings.html</destinationFile>
+					  </fileSet>   
+					  <fileSet>
+		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/weather.html</sourceFile>
+		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/weather.html</destinationFile>
+					  </fileSet>  					             
+					</fileSets>
+		            </configuration>
+		          </execution>
+		        </executions>
+		      </plugin>
 		</plugins>
 	</build>
 </project>
