--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 			            </goals>
 			            <configuration>
 			                <outputDirectory>
-			                    ${project.build.directory}/lib
+			                    ${project.build.directory}/Release/lib
 			                </outputDirectory>
 			            </configuration>
 			        </execution>
@@ -138,6 +138,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 			    <configuration>
 			    	<source>1.8</source>
 					<target>1.8</target>
+					<outputDirectory>${basedir}/target/Release/</outputDirectory>
 			        <archive>
 			            <manifest>
 			                <addClasspath>true</addClasspath>
@@ -146,9 +147,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 			            </manifest>
 			        </archive>
 			    </configuration>
-			</plugin>
-			
-			
+			</plugin>			
 		      <plugin>
 		        <groupId>com.coderplus.maven.plugins</groupId>
 		        <artifactId>copy-rename-maven-plugin</artifactId>
@@ -164,39 +163,39 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		            <fileSets>
 					  <fileSet>
 			              <sourceFile>${basedir}/log4j.properties</sourceFile>
-			              <destinationFile>${basedir}/target/log4j.properties</destinationFile>
+			              <destinationFile>${basedir}/target/Release/log4j.properties</destinationFile>
 					  </fileSet>
 					  <fileSet>
 		              	<sourceFile>${basedir}/application.properties</sourceFile>
-		              	<destinationFile>${basedir}/target/application.properties</destinationFile>
+		              	<destinationFile>${basedir}/target/Release/application.properties</destinationFile>
 					  </fileSet>  
 					  <fileSet>
 		              	<sourceFile>${basedir}/WebContent/WEB-INF/lib/css/style.css</sourceFile>
-		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/lib/css/style.css</destinationFile>
+		              	<destinationFile>${basedir}/target/Release/WebContent/WEB-INF/lib/css/style.css</destinationFile>
 					  </fileSet>
 					  <fileSet>
 		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/fragments.html</sourceFile>
-		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/fragments.html</destinationFile>
+		              	<destinationFile>${basedir}/target/Release/WebContent/WEB-INF/views/templates/fragments.html</destinationFile>
 					  </fileSet>      
 					  <fileSet>
 		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/home.html</sourceFile>
-		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/home.html</destinationFile>
+		              	<destinationFile>${basedir}/target/Release/WebContent/WEB-INF/views/templates/home.html</destinationFile>
 					  </fileSet>
 					   <fileSet>
 		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/login.html</sourceFile>
-		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/login.html</destinationFile>
+		              	<destinationFile>${basedir}/target/Release/WebContent/WEB-INF/views/templates/login.html</destinationFile>
 					  </fileSet>   
 					   <fileSet>
 		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/registration.html</sourceFile>
-		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/registration.html</destinationFile>
+		              	<destinationFile>${basedir}/target/Release/WebContent/WEB-INF/views/templates/registration.html</destinationFile>
 					  </fileSet>  
 					  <fileSet>
 		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/settings.html</sourceFile>
-		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/settings.html</destinationFile>
+		              	<destinationFile>${basedir}/target/Release/WebContent/WEB-INF/views/templates/settings.html</destinationFile>
 					  </fileSet>   
 					  <fileSet>
 		              	<sourceFile>${basedir}/WebContent/WEB-INF/views/templates/weather.html</sourceFile>
-		              	<destinationFile>${basedir}/target/WebContent/WEB-INF/views/templates/weather.html</destinationFile>
+		              	<destinationFile>${basedir}/target/Release/WebContent/WEB-INF/views/templates/weather.html</destinationFile>
 					  </fileSet>  					             
 					</fileSets>
 		            </configuration>
