Migrate to log4j2 from log4j

--- a/application.properties
+++ b/application.properties
@@ -8,6 +8,8 @@ spring.profiles.active=dev
 
 spring.jpa.hibernate.ddl-auto=none
 
+logging.config=./log4j2.xml
+
 # ========================================================================
 
 # custom properties
