--- a/pom.xml
+++ b/pom.xml
@@ -34,29 +34,26 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		    <artifactId>spring-web</artifactId>
 		</dependency>
 		<dependency>
-	    	<groupId>com.pi4j</groupId>
-	    	<artifactId>pi4j-core</artifactId>
-	  		<version>1.1</version>
-		</dependency>
-		<dependency>
         	<groupId>org.json</groupId>
         	<artifactId>json</artifactId>
     	</dependency>
-		<dependency>
-		    <groupId>log4j</groupId>
-		    <artifactId>log4j</artifactId>
-		    <version>1.2.17</version>
-		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 		  	<artifactId>junit</artifactId>
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-log4j</artifactId>
-		    <version>1.3.8.RELEASE</version>
+		    <artifactId>spring-boot-starter-log4j2</artifactId>
 		</dependency>
-
+    <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-api</artifactId>
+    </dependency>	
+        <dependency>
+        <groupId>org.apache.logging.log4j</groupId>
+        <artifactId>log4j-core</artifactId>
+    </dependency>	
     	<dependency>
 			<groupId>org.thymeleaf</groupId>
 			<artifactId>thymeleaf-spring4</artifactId>
@@ -162,8 +159,8 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		            <configuration>
 		            <fileSets>
 					  <fileSet>
-			              <sourceFile>${basedir}/log4j.properties</sourceFile>
-			              <destinationFile>${basedir}/target/Release/log4j.properties</destinationFile>
+			              <sourceFile>${basedir}/log4j2.xml</sourceFile>
+			              <destinationFile>${basedir}/target/Release/log4j2.xml</destinationFile>
 					  </fileSet>
 					  <fileSet>
 		              	<sourceFile>${basedir}/application.properties</sourceFile>
