Add SensorIt via @Autowired, move sensor pass to app prop

--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 # ========================================================================
 
-# spring active profiles: dev - for testing; prod - for using
+# spring active profiles: dev - for testing; prod - for rpi deploying
 
 # ========================================================================
 
@@ -16,5 +16,5 @@ logging.config=./log4j2.xml
 
 #internal sensor for temperature, humidity, pressure (DHT11, BMP180 - WebSensor class)
 custom.ipInternalSensor = 192.168.1.115:80
-custom.intSensorPassword = 04122018pass
+custom.intSensorPassword = 
 custom.ipExternalSensor = api.openweathermap.org/data/2.5/weather?id=3094802&appid=687d050dcb5e9bec0e31d3a59ca8113c
