--- a/application.properties
+++ b/application.properties
@@ -1,18 +1,17 @@
 # ========================================================================
-
-# spring active profiles: dev - for testing; prod - for rpi deploying
-
+# = spring active profiles: dev - for testing; prod - for rpi deploying ==
 # ========================================================================
 
 spring.profiles.active=dev
-
 spring.jpa.hibernate.ddl-auto=none
-
 logging.config=./log4j2.xml
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
 # ========================================================================
-
-# custom properties
+# ========================== Custom properties ===========================
+# ========================================================================
 
 #internal sensor for temperature, humidity, pressure (DHT11, BMP180 - WebSensor class)
 custom.ipInternalSensor = 192.168.1.115:80
