--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		    <artifactId>jaxb-api</artifactId>
 		    <version>2.3.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>commons-lang</groupId>
+		    <artifactId>commons-lang</artifactId>
+		    <version>2.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
