--- a/application.properties
+++ b/application.properties
@@ -17,5 +17,5 @@ spring.datasource.password=
 custom.ipInternalSensor = http://192.168.1.115:80
 custom.intSensorPassword = 
 custom.ipExternalSensor = http://api.openweathermap.org/data/2.5/weather?id=3094802&appid=687d050dcb5e9bec0e31d3a59ca8113c
-custom.ipAirLy = https://airapi.airly.eu/v2/measurements/installation?installationId=210
-custom.apiKeyAirLy = FcqXU0gaJvfZM5g7x93j3GzWWGgYTp76
+custom.ipAirLy = 
+custom.apiKeyAirLy = 
