--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		    <artifactId>commons-lang</artifactId>
 		    <version>2.6</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.pi4j</groupId>
+		    <artifactId>pi4j-core</artifactId>
+		    <version>1.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
