Implement sun rise and set handler and service

--- a/application.properties
+++ b/application.properties
@@ -20,4 +20,4 @@ custom.ipExternalSensor = http://api.openweathermap.org/data/2.5/weather?id=3094
 custom.ipAirLy = https://airapi.airly.eu/v2/measurements/installation?installationId=210
 custom.ipAirLyInstallation= https://airapi.airly.eu/v2/installations/210
 custom.apiKeyAirLy = FcqXU0gaJvfZM5g7x93j3GzWWGgYTp76
-custom.ipSunSetRise = https://api.sunrise-sunset.org/json?lat=50.055914&lng=19.944455&date=today
+custom.ipSunSetRise = https://api.sunrise-sunset.org/json?lat=50.055914&lng=19.944455&date=today&formatted=0
