Implement AccuWeatherService. Move @values annotation from webcfg to proper classes and add @Component instead bean creation. Add modify flag for AbstractSensorService to monitor if UI refreshing is needed

--- a/application.properties
+++ b/application.properties
@@ -21,3 +21,4 @@ custom.ipAirLy = https://airapi.airly.eu/v2/measurements/installation?installati
 custom.ipAirLyInstallation= https://airapi.airly.eu/v2/installations/210
 custom.apiKeyAirLy = FcqXU0gaJvfZM5g7x93j3GzWWGgYTp76
 custom.ipSunSetRise = https://api.sunrise-sunset.org/json?lat=50.055914&lng=19.944455&date=today&formatted=0
+custom.urlAccuWeather = http://dataservice.accuweather.com/currentconditions/v1/274455?apikey=7sqgOrHarHLSeM9F7wZ6s7Kt2kqjWAvj&language=pl-pl&details=true
