Implement UI - finish

--- a/application.properties
+++ b/application.properties
@@ -14,11 +14,11 @@ spring.datasource.password=
 # ========================================================================
 
 #internal sensor for temperature, humidity, pressure (DHT11, BMP180 - WebSensor class)
-custom.ipInternalSensor = http://192.168.1.115:80
+custom.ipInternalSensor = 
 custom.intSensorPassword = 
-custom.ipExternalSensor = http://api.openweathermap.org/data/2.5/weather?id=3094802&appid=687d050dcb5e9bec0e31d3a59ca8113c
-custom.ipAirLy = https://airapi.airly.eu/v2/measurements/installation?installationId=210
-custom.ipAirLyInstallation= https://airapi.airly.eu/v2/installations/210
-custom.apiKeyAirLy = FcqXU0gaJvfZM5g7x93j3GzWWGgYTp76
+custom.ipExternalSensor = 
+custom.ipAirLy = 
+custom.ipAirLyInstallation= 
+custom.apiKeyAirLy = 
 custom.ipSunSetRise = https://api.sunrise-sunset.org/json?lat=50.055914&lng=19.944455&date=today&formatted=0
-custom.urlAccuWeather = http://dataservice.accuweather.com/currentconditions/v1/274455?apikey=7sqgOrHarHLSeM9F7wZ6s7Kt2kqjWAvj&language=pl-pl&details=true
+custom.urlAccuWeather = 
