Add mock for external sensor. Fix for initialization sensors after startup

--- a/application.properties
+++ b/application.properties
@@ -14,11 +14,15 @@ spring.datasource.password=
 # ========================================================================
 
 #internal sensor for temperature, humidity, pressure (DHT11, BMP180 - WebSensor class)
-custom.ipInternalSensor = 
+custom.ipInternalSensor = http://localhost:8080/mocked_internalsensor
 custom.intSensorPassword = 
-custom.ipExternalSensor = 
-custom.ipAirLy = 
-custom.ipAirLyInstallation= 
+custom.ipExternalSensor = http://localhost:8080/mocked_externalsensor
+custom.ipAirLy = http://localhost:8080/mocked_airly
+custom.ipAirLyInstallation= http://localhost:8080/mocked_airlyInstalation
 custom.apiKeyAirLy = 
-custom.ipSunSetRise = https://api.sunrise-sunset.org/json?lat=50.055914&lng=19.944455&date=today&formatted=0
-custom.urlAccuWeather = 
+custom.ipSunSetRise = http://localhost:8080/mocked_sunsetrise
+custom.urlAccuWeather = http://localhost:8080/mocked_accuweather
+
+
+security.basic.enabled=false
+security.enable-csrf=false
