--- a/application.properties
+++ b/application.properties
@@ -15,11 +15,11 @@ spring.datasource.password=
 
 #internal sensor for temperature, humidity, pressure (DHT11, BMP180 - WebSensor class)
 custom.ipInternalSensor = http://localhost:8080/mocked_internalsensor
-custom.intSensorPassword = 
+custom.intSensorPassword = mockedApiKey
 custom.ipExternalSensor = http://localhost:8080/mocked_externalsensor
 custom.ipAirLy = http://localhost:8080/mocked_airly
 custom.ipAirLyInstallation= http://localhost:8080/mocked_airlyInstalation
-custom.apiKeyAirLy = 
+custom.apiKeyAirLy = mockedApiKey
 custom.ipSunSetRise = http://localhost:8080/mocked_sunsetrise
 custom.urlAccuWeather = http://localhost:8080/mocked_accuweather
 
