--- a/pom.xml
+++ b/pom.xml
@@ -79,10 +79,10 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		    <artifactId>spring-boot-configuration-processor</artifactId>
 		    <optional>true</optional>
 		</dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-        </dependency>
+        <dependency>  
+		    <groupId>org.hibernate</groupId>  
+		    <artifactId>hibernate-core</artifactId>  
+		</dependency>  
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
