--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		    <artifactId>spring-boot-configuration-processor</artifactId>
 		    <optional>true</optional>
 		</dependency>
+		<!-- DATABASE RELATED DEPENDENCIES -->
+		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-orm</artifactId>
+		</dependency>
         <dependency>  
 		    <groupId>org.hibernate</groupId>  
 		    <artifactId>hibernate-core</artifactId>  
@@ -91,6 +96,10 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
+        <dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-jdbc</artifactId>
+		</dependency>
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-test</artifactId>
