Move database and jwt params to app.properties

--- a/application.properties
+++ b/application.properties
@@ -3,12 +3,28 @@
 # ========================================================================
 
 spring.profiles.active=dev
-spring.jpa.hibernate.ddl-auto=none
 logging.config=./log4j2.xml
 
+#Database configuration
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
+
+#Hibernate
+spring.jpa.hibernate.ddl-auto=none
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+hibernate.show-sql=false
+hibernate.format-sql=false
+
+#JWT 
+security.oauth2.client.id=clientid
+security.oauth2.client.client-secret=clientsectet
+security.oauth2.client.grant-type=password,refresh_token,client_credentials
+security.oauth2.client.access-token-validity-seconds=7200
+security.oauth2.client.refresh-token-validity-seconds=7200
+security.oauth2.client.resource-ids=resourceids
+security.oauth2.authorization.token-key-access=testSigningKey
 
 # ========================================================================
 # ========================== Custom properties ===========================
