--- a/application.properties
+++ b/application.properties
@@ -20,7 +20,7 @@ hibernate.format-sql=false
 #JWT 
 security.oauth2.client.id=clientid
 security.oauth2.client.client-secret=clientsectet
-security.oauth2.client.grant-type=password,refresh_token,client_credentials
+security.oauth2.client.grant-type=password,refresh_token
 security.oauth2.client.access-token-validity-seconds=7200
 security.oauth2.client.refresh-token-validity-seconds=7200
 security.oauth2.client.resource-ids=resourceids
