Implement second port

--- a/application.properties
+++ b/application.properties
@@ -5,6 +5,10 @@
 spring.profiles.active=dev
 logging.config=./log4j2.xml
 
+management.context-path=/internal
+management.port = 8081
+management.security.enabled=false
+
 #Database configuration
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=
