--- a/pom.xml
+++ b/pom.xml
@@ -89,8 +89,9 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		    <artifactId>hibernate-core</artifactId>  
 		</dependency>  
 		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+		    <groupId>mysql</groupId>
+		    <artifactId>mysql-connector-java</artifactId>
+		    <version>5.1.6</version>
 		</dependency>
 		<dependency>
             <groupId>com.h2database</groupId>
