--- a/application.properties
+++ b/application.properties
@@ -9,6 +9,15 @@ management.context-path=/internal
 management.port = 8081
 management.security.enabled=false
 
+#https using spring boot mechanism
+server.port=443
+server.ssl.key-password=password
+server.ssl.key-store-password=password
+server.ssl.key-store=./keystore.jks
+security.require-ssl=true
+server.ssl.keyStoreType=PKCS12
+server.ssl.key-alias = selfsigned2
+
 #Database configuration
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.url=
