--- a/pom.xml
+++ b/pom.xml
@@ -9,15 +9,15 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.4.1.RELEASE</version>
+		<version>2.3.5.RELEASE</version>
 	</parent>
 	
   <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-	
-	<dependencies>
+    <maven.compiler.source>1.9</maven.compiler.source>
+    <maven.compiler.target>1.9</maven.compiler.target>
+    <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
+  </properties>	
+  <dependencies>
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-web</artifactId>
@@ -35,6 +35,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<dependency>
         	<groupId>org.json</groupId>
         	<artifactId>json</artifactId>
+        	<version>20201115</version>
     	</dependency>
 
 		<dependency>
@@ -56,7 +57,6 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	    <dependency>
 		    <groupId>org.apache.logging.log4j</groupId>
 		    <artifactId>log4j-web</artifactId>
-		    <version>2.11.1</version>
 		</dependency>
 		<dependency>
          <groupId>org.apache.commons</groupId>
@@ -69,10 +69,12 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<dependency>
 		    <groupId>org.springframework.security</groupId>
 		    <artifactId>spring-security-jwt</artifactId>
+		    <version>1.1.1.RELEASE</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.springframework.security.oauth</groupId>
 		    <artifactId>spring-security-oauth2</artifactId>
+		    <version>2.5.0.RELEASE</version>
 		</dependency>		
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
@@ -91,8 +93,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
-		    <version>5.1.6</version>
-		</dependency>
+		    </dependency>
 		<dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
@@ -127,8 +128,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<dependency>
 		    <groupId>javax.xml.bind</groupId>
 		    <artifactId>jaxb-api</artifactId>
-		    <version>2.3.0</version>
-		</dependency>
+		    </dependency>
 		<dependency>
 		    <groupId>javax.activation</groupId>
 		    <artifactId>activation</artifactId>
@@ -137,8 +137,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<dependency>
 		    <groupId>org.glassfish.jaxb</groupId>
 		    <artifactId>jaxb-runtime</artifactId>
-		    <version>2.3.0-b170127.1453</version>
-		</dependency>		
+		    </dependency>		
 		<dependency>
 		    <groupId>commons-lang</groupId>
 		    <artifactId>commons-lang</artifactId>
@@ -152,6 +151,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<dependency>
 		    <groupId>joda-time</groupId>
 		    <artifactId>joda-time</artifactId>
+		    <version>2.10.8</version>
 		</dependency>
 		<dependency>
 		    <groupId>com.fasterxml.jackson.core</groupId>
