--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		    <artifactId>spring-web</artifactId>
 		</dependency>
 		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-webmvc</artifactId>
+		</dependency>
+				
+		<dependency>
         	<groupId>org.json</groupId>
         	<artifactId>json</artifactId>
         	<version>20201115</version>
