--- a/pom.xml
+++ b/pom.xml
@@ -35,8 +35,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		<dependency>
 		    <groupId>org.springframework</groupId>
 		    <artifactId>spring-webmvc</artifactId>
-		</dependency>
-				
+		</dependency>			
 		<dependency>
         	<groupId>org.json</groupId>
         	<artifactId>json</artifactId>
@@ -95,6 +94,10 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		    <groupId>org.hibernate</groupId>  
 		    <artifactId>hibernate-core</artifactId>  
 		</dependency>  
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jpa</artifactId>
+		</dependency>	
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
