Fix for null in RestConnector

--- a/application.properties
+++ b/application.properties
@@ -44,7 +44,7 @@ security.oauth2.authorization.token-key-access=testSigningKey
 # ========================================================================
 
 #internal sensor for temperature, humidity, pressure (DHT11, BMP180 - WebSensor class)
-custom.ipInternalSensor = http://localhost:8080/mocked_internalsensor
+custom.ipInternalSensor = http://localhosat:8080/mocked_internalsensor
 custom.intSensorPassword = mockedApiKey
 custom.ipExternalSensor = http://localhost:8080/mocked_externalsensor
 custom.ipAirLy = http://localhost:8080/mocked_airly
