--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>home.server.app</groupId>
 	<artifactId>home-server-app</artifactId>
-	<version>2.2.0-SNAPSHOT</version>
+	<version>2.3.0-SNAPSHOT</version>
 	<packaging>jar</packaging> 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -241,6 +241,14 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 		          </execution>
 		        </executions>
 		      </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>9</source>
+					<target>9</target>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
