--- a/pom.xml
+++ b/pom.xml
@@ -4,17 +4,16 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>home.server.app</groupId>
 	<artifactId>home-server-app</artifactId>
-	<version>2.3.0-SNAPSHOT</version>
+	<version>2.2.0</version>
 	<packaging>jar</packaging> 	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.3.5.RELEASE</version>
 	</parent>
-	
   <properties>
-    <maven.compiler.source>1.9</maven.compiler.source>
-    <maven.compiler.target>1.9</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
     <maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
   </properties>	
   <dependencies>
@@ -245,8 +244,8 @@ http://maven.apache.org/xsd/maven-4.0.0.xsd">
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>9</source>
-					<target>9</target>
+					<source>8</source>
+					<target>8</target>
 				</configuration>
 			</plugin>
 		</plugins>
